--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.4",
     "@types/tinycolor2": "^1.4.2",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "tinycolor2": "^1.4.1",
     "typescript": "3.5.2"
