--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "tinycolor2": "^1.4.1",
