--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@types/jest": "24.0.15",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
+    "@types/react-color": "^3.0.1",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
     "@types/tinycolor2": "^1.4.2",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
