--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^11.0.5",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
