--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.18",
     "@types/tinycolor2": "^1.4.2",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
+    "styled-components": "^4.3.2",
     "tinycolor2": "^1.4.1",
     "typescript": "3.5.2"
   },
