--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.18",
     "@types/tinycolor2": "^1.4.2",
+    "bootstrap": "^4.3.1",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
