--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.0",
+    "@material-ui/core": "^4.10.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
@@ -27,7 +27,7 @@
     "react-select": "^3.0.4",
     "styled-components": "^4.3.2",
     "tinycolor2": "^1.4.1",
-    "typescript": "3.5.2"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
