--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-select": "^3.0.13",
     "@types/styled-components": "^4.1.18",
     "@types/tinycolor2": "^1.4.2",
     "bootstrap": "^4.3.1",
