--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/react-select": "^3.0.13",
     "@types/styled-components": "^4.1.18",
     "@types/tinycolor2": "^1.4.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap": "^1.0.1",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
